--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "type": "commonjs",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "npx prettier -w index.html"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.4"
   }
 }
