chore: install live-server;

--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "live-server --port=3000 --no-browser --watch=**/*.html,**/*.css .",
     "format": "npx prettier -w index.html",
     "prepare": "husky"
   },
   "devDependencies": {
     "husky": "^9.1.7",
+    "live-server": "^1.2.2",
     "prettier": "^3.7.4"
   }
 }
